src/objects/Special_Instructions__c.object
<CustomObject>
    <fields>
        <fullName>ACET_Role__c</fullName>
        <description>BEO Specialty value is a combination of the Role and Region listed on the IRCL. This field drives other picklist values available to the agent to identify the correct Special Instruction value.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>BEO Specialty value is a combination of the Role and Region listed on the IRCL. This field drives other picklist values available to the agent to identify the correct Special Instruction value.</inlineHelpText>
        <label>BEO Specialty</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessDirectionExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>BusinessDirectionExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Space for comments to be added to the Special Instructions record by maintenance user. Field visible only to maintenance user and system admin.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DOS_Required_Indicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOS Required Indicator</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Department</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective date of record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Type</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Link</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Required__c</fullName>
        <description>Is a form required per the directions?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Region</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Situs_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Situs State</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Line of Business</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID_Required_Indicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member ID Required Indicator</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Contact_From_CDS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Multiple Contact From CDX</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Associated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number Associated</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_of_Case__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner of Case</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Platform</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>Name of the queue to which cases will be routed.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the queue to which cases will be routed.</inlineHelpText>
        <label>Queue Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Escalation Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Appl_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Appl Desc</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Contact</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Option__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Option</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Day__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SLA Day</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Role</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Category Subtype</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplemental_Routing_Ref__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Supplemental Routing Ref</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplemental_Routing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Supplemental Routing Desc</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue Category</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Category Type</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL/Email</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Region</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_on_Routed_Appl__c</fullName>
        <description>Validation on the Routed Appl Desc field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation on Routed Appl</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <label>Special Instruction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Business_Unit__c</columns>
        <columns>Topic__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Supplemental_Routing_Ref__c</columns>
        <columns>Supplemental_Routing__c</columns>
        <columns>ACET_Role__c</columns>
        <columns>URL_Email__c</columns>
        <columns>Queue_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SI-{00000000}</displayFormat>
        <label>Special Instruction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>